--- a/css/main.css
+++ b/css/main.css
@@ -36,9 +36,20 @@ nav ul li {
     font-size: 1.5rem;
     margin: 0.5rem;
 }
+nav img{
+    height: 4rem;
+    transition: 1s;
+}
+nav img:hover{
+    transform: scale(1.1);
+}
 
 nav a {
     color: rgb(209, 209, 170);
+    transition: 0.5s;
+}
+nav a:hover {
+    color: rgb(255, 255, 255);
 }
 /*primera seccion main*/
 .promociones{
@@ -137,8 +148,8 @@ h2{
     height: 1.5rem;
     width: 1.5rem;
 
-}
 
+}
 
 /*configuracion footer*/
 footer img{
@@ -180,37 +191,64 @@ footer h3{
     flex-direction: column;
     align-items: center;
     grid-area: p1;
+    transition: 1s;
+}
+.producto1:hover{
+    transform: scale(1.1);
 }
 .producto2{
     display: flex;
     flex-direction: column;
     align-items: center;
     grid-area: p2;
+    transition: 1s;
+}
+.producto2:hover{
+    transform: scale(1.1);
 }
 .producto3{
     display: flex;
     flex-direction: column;
     align-items: center;
     grid-area: p3;
+    transition: 1s;
+}
+.producto3:hover{
+    transform: scale(1.1);
 }
 .producto4{
     display: flex;
     flex-direction: column;
     align-items: center;
     grid-area: p4;
+    transition: 1s;
 }
+.producto4:hover{
+    transform: scale(1.1);
+}
+
 .producto5{
     display: flex;
     flex-direction: column;
     align-items: center;
     grid-area: p5;
+    transition: 1s;
 }
+.producto5:hover{
+    transform: scale(1.1);
+}
+
 .producto6{
     display: flex;
     flex-direction: column;
     align-items: center;
     grid-area: p6;
+    transition: 1s;
 }
+.producto6:hover{
+    transform: scale(1.1);
+}
+
 .listaProductos h4{
     text-align: center;
     font-size: 0.7rem;
