agregado de menu hamburgesa con bootstrap

--- a/css/main.css
+++ b/css/main.css
@@ -48,8 +48,23 @@ nav a {
     color: rgb(209, 209, 170);
     transition: 0.5s;
 }
-nav a:hover {
+.nav-link{
+    color: rgb(209, 209, 170);
+}
+.nav-link:hover {
     color: rgb(255, 255, 255);
+}
+.btn{
+    width: 5rem;
+    background-color: rgb(209, 209, 170);
+    color: rgb(41, 41, 41);
+}
+.btn:hover{
+    background-color: rgb(255, 255, 255);
+    color: rgb(41, 41, 41);
+}
+.form-control{
+    width: 6rem;
 }
 /*primera seccion main*/
 .promociones{
